Add Zopim Live Chat Script

--- a/source/partials/_footer.html.slim
+++ b/source/partials/_footer.html.slim
@@ -9,3 +9,5 @@ footer.footer
 
 script#dsq-count-scr async="" data-cfasync="false" src="//#{disqus_shortname}.disqus.com/count.js"
 = javascript_include_tag "main"
+
+= partial "partials/zopim"
