--- a/source/assets/stylesheets/main.css.sass
+++ b/source/assets/stylesheets/main.css.sass
@@ -1,30 +1,28 @@
+// Bourbon -> http://bourbon.io/docs/
+@import "bourbon"
 
-//
-// vendors
-//
-@import "vendors/all"
+@import "variables"
+@import "media"
+@import "base/reset"
+@import "base/base"
+@import "base/typography"
+@import "base/selection"
+@import "base/lists"
+@import "base/table"
+@import "base/grid"
+@import "base/forms"
+@import "base/buttons"
+@import "base/utility"
 
-//
-// settings
-//
-@import "settings/all"
+@import "components/hero"
+@import "components/social"
+@import "components/navbar"
+@import "components/header"
+@import "components/card"
+@import "components/page"
+@import "components/article"
+@import "components/paginate"
+@import "components/footer"
+@import "components/theme"
 
-//
-// base
-//
-@import "base/all"
-
-//
-// generic
-//
-@import "generic/all"
-
-//
-// elements
-//
-@import "elements/all"
-
-//
-// components
-//
-@import "components/all"
+@import "syntax"
