--- a/source/layouts/pages.html.slim
+++ b/source/layouts/pages.html.slim
@@ -8,12 +8,10 @@ html.no-js
     = partial "partials/social-opengraph"
     - body_class = page_classes
     - if current_page.data.body_class
-      body_class += current_page.data.body_class
+      - body_class += ' ' + current_page.data.body_class
     - body_class = body_class.sub(/[_]/, '-')
   body class="#{body_class}"
-    = partial "partials/nav"
-    main.site-main role="main"
-      = partial "partials/header"
-      section.container-inn
-        = yield
-      = partial "partials/footer"
+    = partial "partials/header"
+    main.main role="main"
+      = yield
+    = partial "partials/footer"
