--- a/source/partials/_footer.html.slim
+++ b/source/partials/_footer.html.slim
@@ -1,8 +1,6 @@
-= partial "partials/search-form"
+/ = partial "partials/search-form"
 
 footer.footer
-  nav.social-nav
-    = partial "partials/social"
   small
     = "Made with ❤ by #{link_to(site_author, site_url)} "
     = "using #{link_to "middlemanapp.com", "http://middlemanapp.com" , :target => :blank }"
