--- a/source/posts/2014-07-13-criando-formulario-de-contato-para-wordpress-com-odin-framework.md.erb
+++ b/source/posts/2014-07-13-criando-formulario-de-contato-para-wordpress-com-odin-framework.md.erb
@@ -25,7 +25,7 @@ Você não precisa de todos os arquivos do Odin para implementar os formulários
 
 Para esta demostração eu usei o tema <a title="Twenty Twelve Wordpress Theme" href="http://wordpress.org/themes/twentytwelve" target="_blank">Twenty Twelve</a>. Dupliquei o arquivo <code>page.php</code> e criei um template chamado <code>contato.php</code>.
 
-> **Obs:** Para saber como criar um template no Wordpress acesse e leia esse link: <a title="Wordpress Page Templates" href="http://codex.wordpress.org/Page_Templates" target="_blank">Page Tempalte</a>
+> **Obs:** Para saber como criar um template no Wordpress acesse e leia esse link: <a title="Wordpress Page Templates" href="http://codex.wordpress.org/Page_Templates" target="_blank">Page Template</a>
 
 Desse template eu removi o <code>while</code> padrão do tema e a linha onde está chamando o sitebar <code>get_sidebar();</code>
 
