--- a/source/layouts/layout.html.slim
+++ b/source/layouts/layout.html.slim
@@ -12,3 +12,4 @@ html.no-js
     - body_class = body_class.sub(/[_]/, '-')
   body class="#{body_class}"
     = yield
+    = javascript_include_tag "main"
