--- a/source/layouts/posts.html.slim
+++ b/source/layouts/posts.html.slim
@@ -45,23 +45,23 @@ html.no-js
         meta content="#{site_url}#{image_path('social.png')}" property="twitter:image"
     - body_class = page_classes
     - if current_page.data.body_class
-      body_class += current_page.data.body_class
+      - body_class += ' ' + current_page.data.body_class
     - body_class = body_class.sub(/[_]/, '-')
   body class="#{body_class} single"
-    = partial "partials/nav"
-    main.site-main role="main"
-      = partial "partials/header"
-      article.article itemscope="" itemtype="http://schema.org/NewsArticle" role="article"
-        .container-inn
-          header.article-header
-            meta content="#{current_page.date.strftime('%Y-%m-%d')}" itemprop="datePublished"
-            span.article-meta
-              | Posted on the #{current_page.date.strftime('%d')} of #{current_page.date.strftime('%b')} #{current_page.date.strftime('%Y')}
-            h1.article-title itemprop="headline" = current_page.data.title
-          .article-content itemprop="articleBody"
-            = yield
+    = partial "partials/header"
+    main.main role="main"
+      .container
+        article.article itemscope="" itemtype="http://schema.org/NewsArticle" role="article"
+          .container-inn
+            header.article-header
+              meta content="#{current_page.date.strftime('%Y-%m-%d')}" itemprop="datePublished"
+              span.article-meta
+                | Posted on the #{current_page.date.strftime('%d')} of #{current_page.date.strftime('%b')} #{current_page.date.strftime('%Y')}
+              h1.article-title itemprop="headline" = current_page.data.title
+            .article-content itemprop="articleBody"
+              = yield
 
-      - unless current_article.nil?
-        = partial "partials/comments"
+        - unless current_article.nil?
+          = partial "partials/comments"
 
-      = partial "partials/footer"
+    = partial "partials/footer"
