add middleman deploy, a new post and images

--- a/source/404.html.slim
+++ b/source/404.html.slim
@@ -13,5 +13,5 @@ section.hero.error404
       br/
       small
         | We couldn't find the page you were looking for.
-    nav.hero__actions
-      = link_to 'back to home', local_path(''), :class => 'hero__button'
+    nav.action-buttons
+      = link_to 'back to home', local_path(''), :class => 'button-ghost'
