--- a/source/assets/stylesheets/base/_buttons.sass
+++ b/source/assets/stylesheets/base/_buttons.sass
@@ -21,7 +21,7 @@
   cursor: pointer
   display: inline-block
   font-size: $font-size-base
-  font-weight: $font-weight-normal
+  font-weight: $font-weight-light
   letter-spacing: $letter-spacing-base
   transition: .1s background-color linear, .1s border-color linear
   line-height: 3rem
