--- a/source/assets/stylesheets/components/_footer.sass
+++ b/source/assets/stylesheets/components/_footer.sass
@@ -1,3 +1,7 @@
 .footer
   text-align: center
-  padding: 20px 0
+  padding: $spacing-base 0
+
+  small
+    color: darken($color-silver, 20%)
+    font-weight: $font-weight-light
