--- a/source/assets/stylesheets/components/_hero.sass
+++ b/source/assets/stylesheets/components/_hero.sass
@@ -12,6 +12,18 @@
     display: table-cell
     vertical-align: middle
 
+  &__name
+    color: $color-white
+    margin-bottom: $spacing-mini
+    font-size: 4rem
+
+  &__desc
+    opacity: .75
+    color: $color-white
+    margin-bottom: $spacing-mini
+    font-weight: 300
+    font-size: 2rem
+
   .logo
     &__icon
       opacity: 0
