--- a/source/assets/stylesheets/components/_paginate.sass
+++ b/source/assets/stylesheets/components/_paginate.sass
@@ -1,5 +1,6 @@
 .paginate
   text-align: center
+  +clearfix
 
   .previous-page
     float: left
@@ -18,7 +19,7 @@
 
   span
     padding: 0 $spacing-mini
-    line-height: 2rem
+    line-height: 3rem
     color: darken($color-silver, 15%)
     font-weight: $font-weight-light
     font-size: .8rem
