--- a/source/blog.html.slim
+++ b/source/blog.html.slim
@@ -13,12 +13,12 @@ header.page-title
 - if paginate && num_pages > 1
   nav.paginate
     - if prev_page
-      = link_to 'Previous page', prev_page, class: 'previous-page button-white is-small'
+      = link_to 'Previous page', prev_page, class: 'previous-page button-white'
     - else
-      = link_to 'Previous page', '#', class: 'previous-page button-white is-small disabled'
+      = link_to 'Previous page', '#', class: 'previous-page button-white disabled'
     span
       | Page #{page_number} of #{num_pages}
     - if next_page
-      = link_to 'Next page', next_page, class: 'next-page button-white is-small'
+      = link_to 'Next page', next_page, class: 'next-page button-white'
     - else
-      = link_to 'Next page', '#', class: 'next-page button-white is-small disabled'
+      = link_to 'Next page', '#', class: 'next-page button-white disabled'
