--- a/source/assets/stylesheets/base/_forms.sass
+++ b/source/assets/stylesheets/base/_forms.sass
@@ -2,7 +2,8 @@
 // Forms
 // ––––––––––––––––––––––––––––––––––––––––––––––––––
 
-#{$all-text-inputs}, // all text inputs by Bourbon -> http://bourbon.io/docs/#text-inputs
+// all text inputs by Bourbon -> http://bourbon.io/docs/#text-inputs
+#{$all-text-inputs},
 select
   appearance: none
   background-color: $input-background
