--- a/source/assets/stylesheets/base/_grid.sass
+++ b/source/assets/stylesheets/base/_grid.sass
@@ -4,7 +4,7 @@
 
 .container
   margin: 0 auto
-  max-width: $tablet-large
+  max-width: $tablet
   padding: 0 $spacing-small
   position: relative
   width: 100%
