--- a/source/assets/stylesheets/base/_typography.sass
+++ b/source/assets/stylesheets/base/_typography.sass
@@ -100,6 +100,9 @@ blockquote
   border-left: .3rem solid $color-quaternary
   padding: $spacing-mini $spacing-small
 
+  p
+    font-size: 2rem
+
   & *:last-child
     margin: 0
 
