--- a/source/assets/stylesheets/components/_article.sass
+++ b/source/assets/stylesheets/components/_article.sass
@@ -62,3 +62,16 @@ iframe
     left: 0
     width: 100%
     height: 100%
+
+.share-icons
+  ul
+    margin: 0
+    padding: 0
+
+  li
+    font-weight: $font-weight-light
+    padding: 0 10px
+    vertical-align: middle
+
+    svg
+      display: block
