--- a/source/layouts/posts.html.slim
+++ b/source/layouts/posts.html.slim
@@ -47,6 +47,21 @@ html.no-js
     - if current_page.data.body_class
       - body_class += ' ' + current_page.data.body_class
     - body_class = body_class.sub(/[_]/, '-')
+
+    javascript:
+      function PopupCenter(url, title, w, h) {
+        var dualScreenLeft = window.screenLeft != undefined ? window.screenLeft : screen.left;
+        var dualScreenTop = window.screenTop != undefined ? window.screenTop : screen.top;
+        var width = window.innerWidth ? window.innerWidth : document.documentElement.clientWidth ? document.documentElement.clientWidth : screen.width;
+        var height = window.innerHeight ? window.innerHeight : document.documentElement.clientHeight ? document.documentElement.clientHeight : screen.height;
+
+        var left = ((width / 2) - (w / 2)) + dualScreenLeft;
+        var top = ((height / 2) - (h / 2)) + dualScreenTop;
+        var newWindow = window.open(url, title, 'scrollbars=yes, width=' + w + ', height=' + h + ', top=' + top + ', left=' + left);
+        if (window.focus) {
+          newWindow.focus();
+        }
+      }
   body class="#{body_class} single"
     = partial "partials/header"
     main.main role="main"
@@ -60,6 +75,7 @@ html.no-js
               h1.article-title itemprop="headline" = current_page.data.title
             .article-content itemprop="articleBody"
               = yield
+              = partial "partials/share"
 
         - unless current_article.nil?
           = partial "partials/comments"
