add twitter card meta tags

--- a/source/partials/_social-opengraph.html.slim
+++ b/source/partials/_social-opengraph.html.slim
@@ -1,8 +1,12 @@
 - if build?
-  meta content=site_description property="og:description"
+  meta content="#{site_description}" property="og:description"
   meta content="website" property="og:type"
   meta content="#{image_path('social.jpg')}" property="og:image"
   meta content="#{site_url}#{current_page.url}" property="og:url"
-  meta content=site_author property="og:site_name"
-  meta content=site_description property="twitter:description"
+  meta content="#{site_author}" property="og:site_name"
+  meta content="#{site_description}" property="twitter:description"
+  meta content="#{site_url}" property="twitter:site"
+  meta content="@Pia_Frontend" property="twitter:creator"
+  meta content="#{site_title}" property="twitter:title"
+  meta content="#{site_description}" property="twitter:description"
   meta content="#{image_path('social.jpg')}" property="twitter:image"
