--- a/source/assets/stylesheets/components/_page.sass
+++ b/source/assets/stylesheets/components/_page.sass
@@ -8,6 +8,14 @@
   margin-bottom: $spacing-big
   +clearfix
 
+  &::after
+    content: ""
+    display: block
+    background-color: $color-white
+    width: 30px
+    height: 3px
+    margin: .3rem auto
+
   +media($tablet-large)
     margin-bottom: ($spacing-big * 2)
 
