Typography and color

--- a/source/assets/stylesheets/_variables.sass
+++ b/source/assets/stylesheets/_variables.sass
@@ -21,7 +21,7 @@ $color-white       : #fdfffc
 $color-black       : #000
 $color-silver      : #ceddd8
 $color-gray        : #222
-$color-base        : lighten($color-black, 20%) // #333
+$color-base        : $color-secondary
 $background-base   : darken($color-white, 6%) // #f0f0f0
 $border-color-base : lighten($color-silver, 6%)
 $input-background  : $color-white
