--- a/source/assets/stylesheets/base/_buttons.sass
+++ b/source/assets/stylesheets/base/_buttons.sass
@@ -90,7 +90,8 @@
 
 .button-white
   @extend %buttons
-  +button-variant($color-white, $color-silver)
+  +button-variant($color-white)
+  border: none
 
   &,
   &:focus,
