--- a/source/assets/stylesheets/components/_article.sass
+++ b/source/assets/stylesheets/components/_article.sass
@@ -22,8 +22,11 @@
 .article-title
   font-size: 1.8rem
 
+  &, a
+    color: $color-secondary
+
   +media($desktop)
-    font-size: 3.2rem
+    font-size: 2.8rem
 
 .single
   .article-header
