Archive and tags pages

--- a/source/assets/stylesheets/components/_page.sass
+++ b/source/assets/stylesheets/components/_page.sass
@@ -14,7 +14,7 @@
     background-color: $color-white
     width: 30px
     height: 3px
-    margin: .3rem auto
+    margin: 1rem auto 0
 
   +media($tablet-large)
     margin-bottom: ($spacing-big * 2)
