--- a/source/posts/2016-08-23-agradeca-mais-e-reclame-menos.md.erb
+++ b/source/posts/2016-08-23-agradeca-mais-e-reclame-menos.md.erb
@@ -15,13 +15,13 @@ E se a gente substituir nossas reclamações diárias por agradecimentos?
 
 <%= image_tag '/assets/images/posts/2016/08/thanks.gif' %>
 
-E se pararmos de reclamar que está chovendo no horário de ir pro trabalho a gente apenas agradecer por ter um trabalho?
+E se pararmos de reclamar que está chovendo no horário de ir pro trabalho apenas agradecer por ter um trabalho?
 
-E se ao invés de reclamarmos que acordamos muito cedo todos os dias a gente agradecer por ter tido onde dormir e por acordar com vida todas as manhãs?
+E se ao invés de reclamarmos que acordamos muito cedo todos os dias agradecer por ter onde dormir e por acordar com vida todas as manhãs?
 
-E se a gente apenas agradecer por ter agasalhos para nos aquecer todos dias ao invés de reclamar que está muito frio?
+E se apenas agradecermos por ter agasalhos para nos aquecer todos dias ao invés de reclamar que está muito frio?
 
-Parar de reclamar que está muito quente e simplesmente agradecer pela água ou refrigerante (com limão e gelo) que tomamos, apenas por que podemos.
+Parar de reclamar que está muito quente e simplesmente agradecer pela água ou refrigerante (com limão e gelo) que tomamos, apenas porque podemos.
 
 <%= image_tag '/assets/images/posts/2016/08/nooo.gif' %>
 
@@ -49,7 +49,7 @@ Eu poderia ficar apenas olhando o lado negativo de se perder um emprego, mas eu 
 
 Eu poderia ficar triste por não contribuir mais com o crescimento do produto, mas o melhor a fazer é olhar para trás e ver o quanto eu contribui, o quanto eu já fiz por ele para ele estar ali, e agradecer por isso.
 
-> E se a gente substituir nossas reclamações diárias por agradecimentos, vamos fazer um teste?
+> E se substituirmos nossas reclamações diárias por agradecimentos, vamos fazer um teste?
 
 ---
 
