--- a/source/calendar.html.slim
+++ b/source/calendar.html.slim
@@ -1,26 +1,33 @@
 ---
+title: Archive
 pageable: true
+layout: blog
 ---
-h1
-  = "Archive for "
-  - case page_type
-  - when 'day'
-    = Date.new(year, month, day).strftime('%b %e %Y')
-  - when 'month'
-    = Date.new(year, month, 1).strftime('%b %Y')
-  - when 'year'
-    = year
-- if paginate && num_pages > 1
-  p
-    = "Page #{page_number} of #{num_pages} "
-  - if prev_page
-    p= link_to 'Previous page', prev_page
-ul
+
+header.page-title
+  h1
+    = "Archive for "
+    - case page_type
+    - when 'day'
+      = Date.new(year, month, day).strftime('%b %e %Y')
+    - when 'month'
+      = Date.new(year, month, 1).strftime('%b %Y')
+    - when 'year'
+      = year
+
+.blog-list
   - page_articles.each_with_index do |article, i|
-    li
-      = link_to article.title + " ", article
-      span
-        = article.date.strftime('%b %e') + " "
-- if paginate
-  - if next_page
-    p= link_to 'Next page', next_page
+    = partial "partials/article", locals: { :article => article }
+
+- if paginate && num_pages > 1
+  nav.paginate
+    - if prev_page
+      = link_to 'Previous page', prev_page, class: 'previous-page button-white'
+    - else
+      = link_to 'Previous page', '#', class: 'previous-page button-white disabled'
+    span
+      | Page #{page_number} of #{num_pages}
+    - if next_page
+      = link_to 'Next page', next_page, class: 'next-page button-white'
+    - else
+      = link_to 'Next page', '#', class: 'next-page button-white disabled'
