--- a/source/tag.html.slim
+++ b/source/tag.html.slim
@@ -1,20 +1,25 @@
 ---
-pageable: true
-per_page: 12
+title: 'Articles tagged'
+layout: blog
 ---
-h1
-  = "Articles tagged #{tagname} "
-- if paginate && num_pages > 1
-  p
-    = "Page #{page_number} of #{num_pages} "
-  - if prev_page
-    p= link_to 'Previous page', prev_page
-ul
-  - page_articles.each_with_index do |article, i|
-    li
-      = link_to article.title, article
-      span= article.date.strftime('%b %e')
-- if paginate
-  - if next_page
-    p= link_to 'Next page', next_page
 
+header.page-title
+  h1
+    = "Articles tagged: #{tagname} "
+
+.blog-list
+  - page_articles.each_with_index do |article, i|
+    = partial "partials/article", locals: { :article => article }
+
+- if paginate && num_pages > 1
+  nav.paginate
+    - if prev_page
+      = link_to 'Previous page', prev_page, class: 'previous-page button-white'
+    - else
+      = link_to 'Previous page', '#', class: 'previous-page button-white disabled'
+    span
+      | Page #{page_number} of #{num_pages}
+    - if next_page
+      = link_to 'Next page', next_page, class: 'next-page button-white'
+    - else
+      = link_to 'Next page', '#', class: 'next-page button-white disabled'
