--- a/source/assets/stylesheets/components/_article.sass
+++ b/source/assets/stylesheets/components/_article.sass
@@ -41,6 +41,11 @@
     +media($desktop)
       font-size: 3.2rem
 
+.article-content
+  img
+    border-radius: 3px
+    box-shadow: 0 2px 2px rgba($color-black, .1)
+
 .comments
   padding: $spacing-big 0
   @extend .clearfix
