--- a/source/posts/2016-08-23-agradeca-mais-e-reclame-menos.md.erb
+++ b/source/posts/2016-08-23-agradeca-mais-e-reclame-menos.md.erb
@@ -55,7 +55,7 @@ Eu poderia ficar triste por não contribuir mais com o crescimento do produto, m
 
 ### Conclusão
 
-Sempre que acontece algo ruim a gente simplesmente não consegue enxergar o que aconteceu de bom no meio do caminho, não por maldade isso é natural no ser humano.
+Sempre que acontece algo ruim simplesmente não consegue enxergar o que aconteceu de bom no meio do caminho, não por maldade isso é natural no ser humano.
 
 Por isso eu desafio você a reclamar cada vez menos e agradecer todos os dias por ter mais um dia para viver.
 
