Add rakefile for deploy and fix typo on post

--- a/source/posts/2015-09-30-8-meses-de-malapronta-e-o-fim.md.erb
+++ b/source/posts/2015-09-30-8-meses-de-malapronta-e-o-fim.md.erb
@@ -2,6 +2,8 @@
 title: "8 meses de MalaPronta e o fim."
 date: 2015-09-30
 description: "Eu queria poder dizer que to feliz com tudo isso, mas não to. Eu amava trabalhar lá, apesar de muitas intrigas e desavenças, eu amava meu emprego."
+categories:
+- geral
 ---
 
 Esse post não poderia começar melhor, com um "*I love U*" para MalaPronta.com, um ambiente descontraído com piadas ruins (mas que são boas) e uma sala que não é nem quente nem fria e nem escura ou clara(entendedores entenderão).
