--- a/source/posts/2016-08-23-agradeca-mais-e-reclame-menos.md.erb
+++ b/source/posts/2016-08-23-agradeca-mais-e-reclame-menos.md.erb
@@ -2,9 +2,8 @@
 title: "Reflexão: agradeça mais e reclame menos"
 description: "Você já parou pra pensar quantas vezes você reclama por dia, ou quantas vezes você reclamou hoje?"
 date: 2016-08-23 19:27:09
-comments: true
 categories:
-- reflexao
+- geral
 tags:
 - reflexao
 ---
@@ -55,7 +54,7 @@ Eu poderia ficar triste por não contribuir mais com o crescimento do produto, m
 
 ### Conclusão
 
-Sempre que acontece algo ruim simplesmente não consegue enxergar o que aconteceu de bom no meio do caminho, não por maldade isso é natural no ser humano.
+Sempre que acontece algo ruim no meio do caminho simplesmente não conseguimos enxergar o que aconteceu de bom, não por maldade isso é natural no ser humano.
 
 Por isso eu desafio você a reclamar cada vez menos e agradecer todos os dias por ter mais um dia para viver.
 
