--- a/source/assets/stylesheets/components/_footer.sass
+++ b/source/assets/stylesheets/components/_footer.sass
@@ -2,6 +2,13 @@
   text-align: center
   padding: $spacing-base 0
 
+  svg
+    width: 16px
+    height: 16px
+    fill: #f00
+    position: relative
+    top: 2px
+
   small
     color: darken($color-silver, 20%)
     font-weight: $font-weight-light
