--- a/source/layouts/posts.html.slim
+++ b/source/layouts/posts.html.slim
@@ -15,8 +15,12 @@ html.no-js
 
     meta rel="canonical" href="#{site_url}#{current_page.url}"
 
-    = partial "partials/social-opengraph"
     - if build?
+      meta content="#{site_author}" property="og:site_name"
+      meta content="#{site_url}" property="twitter:site"
+      meta content="@Pia_Frontend" property="twitter:creator"
+      meta content="#{site_title}" property="twitter:title"
+
       - page_articles.index do |article, i|
         - if current_article.data.summary
           meta content="#{current_article.data.summary}" property="og:description"
