--- a/source/localizable/about.en.html.slim
+++ b/source/localizable/about.en.html.slim
@@ -5,7 +5,7 @@ body_class: theme-tertiary
 ---
 
 section.container
-  header.page-title
+  header.page-title.js-text-parallax
     h1 About me
 
   .card.card--about.text-center
