--- a/source/partials/_social-opengraph.html.slim
+++ b/source/partials/_social-opengraph.html.slim
@@ -5,6 +5,6 @@
   meta content="#{site_url}#{current_page.url}" property="og:url"
   meta content="#{site_author}" property="og:site_name"
   meta content="#{site_url}" property="twitter:site"
-  meta content="@Pia_Frontend" property="twitter:creator"
+  meta content="#{twitter}" property="twitter:creator"
   meta content="#{site_title}" property="twitter:title"
   meta content="#{site_description}" property="twitter:description"
