--- a/source/localizable/about.br.html.slim
+++ b/source/localizable/about.br.html.slim
@@ -5,7 +5,7 @@ body_class: theme-primary
 ---
 
 section.container
-  header.page-title
+  header.page-title.js-text-parallax
     h1 Sobre mim
 
   .card.card--about.text-center
