--- a/source/assets/stylesheets/components/_theme.sass
+++ b/source/assets/stylesheets/components/_theme.sass
@@ -18,6 +18,11 @@ body
       path
         fill: $color-primary
 
+  &.header--bg
+    &::before
+      background: url(../images/header.jpg) no-repeat bottom
+      background-size: cover
+
   &.theme-secondary
     &::before
       background-color: $color-secondary
